7.1_zusatz/backend/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backen-route
    sandbox: learn-kubernetes
    learn-kubernetes: backen-route
  name: backen-route
spec:
  port:
    targetPort: 10000-tcp
  to:
    kind: Service
    name: backen-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
